<resources>
    <string name="app_name">Countdown Live Wallpaper</string>
    <string name="change_lang_button">Language</string>
    <string name="title_activity_settings">Settings</string>
    <string name="change_language_title">Choose Language</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>


    <!-- Messages Preferences -->
    <string name="wallpaper_description">Countdown wallpaper xml layout</string>

    <!-- Create Timer -->
    <string name="label_select_timer">Name</string>
    <string name="create_new_button">Create</string>
    <string name="countdown_name">CountDown Name</string>
    <string name="set_date_and_time_button">set Date and Time</string>
    <string name="background_image_of_timer">background image of timer</string>
    <string name="toast_date_not_set">Date must be set first</string>

    <string name="gradient_theme_option">Gradient</string>
    <string name="image_theme_option">Image</string>
    <string name="solid_color_theme_option">Solid Color</string>
    <string name="choose_theme_dialog_title">Choose Theme</string>
    <string name="image_not_found_error">Image not found!</string>
    <string name="image_crop_support_error">Your phone does not support image crop!</string>
    <string name="image_crop_permission_denied">Image crop permission denied</string>
    <string name="selected_image_saved">Selected image saved</string>

    <!-- Set as wallpaper error toast -->
    <string name="no_timer_yet">Create a timer first</string>

    <!-- Timer UI -->
    <string name="hour_text">hours</string>
    <string name="day_text">days</string>
    <string name="minute_text">minutes</string>
    <string name="second_text">seconds</string>

    <!-- Main Screen -->
    <string name="add_new_entry">Add New</string>
    <string name="set_as_wallpaper">Set As Wallpaper</string>
    <string name="list_of_timers">List</string>
    <string name="timer_settings">Preferences</string>
    <string name="delete_timer">Delete</string>
    <string name="delete_done">Deleted Successfully</string>
    <string name="no_record_to_delete">No record to delete</string>

    <!-- Preferences screen-->
    <string name="preference_category">Timer Settings</string>

    <!-- Timer unit values -->
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>

    <!-- List menu title-->
    <string name="timers_list_title">Timers</string>
    <string name="edit_count_down">Edit Countdown</string>
    <string name="preview">Text Color</string>
    <string name="toast_background_not_set">Select Background First</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="multi_select_list_preferences">Choose Unit</string>
    <string name="change_background">Change Background</string>
    <string name="contact_us">Credits</string>
    <string name="credits_page_title">Credits</string>
    <string name="thanks_to_credits">Thanks To</string>
    <string name="main_intro_showcase">Click this button to add a new countdown timer</string>
    <string name="main_intro_showcase_title">Welcome</string>
    <string name="set_background_intro_showcase_title">Choose Image</string>
    <string name="set_background_intro_showcase">Click this image to change background</string>
    <string name="set_units">Set Units</string>
    <string name="unit_select_title">Units To Display</string>
    <string name="no_timer_found_image_description">No Timer Found</string>
    <string name="since">"Since"</string>
    <string name="until">"Until"</string>
    <string name="edit_count_down_title">Edit Countdown</string>
    <string name="countdown_widget_label">Countdown Widget</string>
    <string name="widget_configuration_activity">Select Countdown</string>
    <string name="timer_name">Timer Name</string>
    <string name="timer_date">Timer Date</string>

    <!-- Others -->
    <string name="activity_failed">activity_failed</string>
    <string name="label">label</string>
    <string name="sampletext">SampleText</string>
    <string name="units">units</string>
    <string name="remaining">remaining</string>
    <string name="text_color_picker_dialog">pick a color for text</string>
    <string name="channel_name">Timer Due</string>
    <string name="channel_description">This notifies you when one of your tiemrs is due.</string>
    <string name="timer_is_due">Your timer is due....</string>
    <string name="timer_is_due_decription">" %1$s is happening!"</string>


</resources>
