<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pfoss.countdownlivewallpaper.activities.MainActivity">


    <item
        android:id="@+id/countDownListMenuItem"
        android:orderInCategory="2"
        android:title="@string/list_of_timers"
        android:icon="@drawable/ic_menu_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settingsMenuItem"
        android:orderInCategory="3"
        android:title="@string/timer_settings"
        android:icon="@drawable/ic_settings_white_24dp" />
    <item android:title="@string/delete_timer"
        android:id="@+id/deleteTimer"
        android:orderInCategory="10"/>



</menu>