<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WallpaperCreateActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/countDownNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:text="@string/countdown_name" />

            <EditText
                android:id="@+id/labelEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:ems="10"
                android:hint="@string/label_select_timer"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <Button
                android:id="@+id/setDateAndTimeDialogButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:text="@string/set_date_and_time_button" />

            <Button
                android:id="@+id/createTimeButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="250dp"
                android:onClick="createNewTimer"
                android:text="@string/create_new_button" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>