<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_rectangle"
    tools:context=".activities.CreateWallpaperActivity">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="back arrow"
        android:onClick="goBack"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_white_70dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="preview"
            android:onClick="chooseImageClickable"
            app:srcCompat="@drawable/image_select"
            tools:srcCompat="@drawable/image_select" />

        <EditText
            android:id="@+id/labelEditText"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="35dp"
            android:autofillHints=""
            android:background="@drawable/rectangle"
            android:ems="10"
            android:hint="@string/label_select_timer"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/setDateAndTimeDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:background="@drawable/button_theme"
            android:padding="10dp"
            android:text="@string/set_date_and_time_button"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/createTimeButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_theme"
            android:onClick="createNewTimerClickable"
            android:text="@string/create_new_button"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>