<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditCountDownActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/textColorPreviewBackground"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:onClick="setTextColorClickable"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/colorizeIconView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:contentDescription="icon of select color"
                    app:srcCompat="@drawable/ic_baseline_colorize_24" />

                <TextView
                    android:id="@+id/textColorPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginLeft="18dp"
                    android:text="@string/preview"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/backgroundPreview"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:onClick="setBackgroundClickable"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/backGroundIconView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_baseline_photo_24" />

                <TextView
                    android:id="@+id/material_text_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginLeft="14dp"
                    android:text="@string/change_background"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/setUnitsFrame"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:onClick="setBackgroundClickable"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/setUnitsIconView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

                <TextView
                    android:id="@+id/material_set_units_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginLeft="14dp"
                    android:text="@string/set_units"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.6" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>